[package]
name = "tauri-mobile-file-association-example"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_mobile_file_association_example_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"

[patch.crates-io]
tauri = { git = "https://github.com/tauri-apps/tauri", branch = "feat/mobile-file-association" }
tauri-build = { git = "https://github.com/tauri-apps/tauri", branch = "feat/mobile-file-association" }
wry = { git = "https://github.com/tauri-apps/wry", branch = "feat/android-on-new-intent" }
tao = { git = "https://github.com/tauri-apps/tao", branch = "feat/opened-event-android" }
tauri-plugin-fs = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/security-scoped-ios" }
